--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
   "type": "module",
-  "name": "desafio-tres-leandro-angelico",
+  "name": "primera-entrega-proyecto",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "description": "",
+  "main": "/src/app.js",
   "scripts": {
     "start": "node .",
     "test": "nodemon -e 'js,html' ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Lean-ang/Desafio-Leandro-Angelico.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Lean-ang/Desafio-Leandro-Angelico/issues"
-  },
-  "homepage": "https://github.com/Lean-ang/Desafio-Leandro-Angelico#readme",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
@@ -27,6 +20,5 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
-  },
-  "description": ""
+  }
 }
