--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "primera-entrega-proyecto",
   "version": "1.0.0",
   "description": "",
-  "main": "/src/app.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "node .",
     "test": "nodemon -e 'js,html' ."
